# TetrisTask

./: CMakeLists.txt  Piece.h  README.md  Task3_Tetris.pro  TetrisTask.pro  Tetris_task.pro  block.h  figure.cpp  figure.h  figures.cpp  figures.h  game.cpp  game.h  game.ui  gamecontroller.h  gamefield.cpp  gamefield.h  gameoverdialog.cpp  gameoverdialog.h  gamestate.cpp  gamestate.h  griddrawer.cpp  griddrawer.h  items.h  logic.cpp  logic.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modaldialog.cpp  modaldialog.h  nextfigure.cpp  nextfigure.h  nextfiguregamegrid.cpp  nextfiguregamegrid.h  previewwindow.cpp  previewwindow.h  resources.qrc  tetramino.cpp  (+15 more)
Tetris/: Tetris.pro  iconImage.qrc  main.cpp  tetriscontroller.cpp  tetriscontroller.h  tetrisitem.cpp  tetrisitem.h  tetrismodel.cpp  tetrismodel.h  tetrisview.cpp  tetrisview.h
src/figure/: figure.cpp  figure.hpp  figure_generator.hpp
src/gamefield/: gamefield.cpp  gamefield.h  table.cpp  table.h
src/tetris/: tetris.cpp  tetris.h  tetris.ui
